--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,10 +16,43 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_export_data"
+        android:id="@+id/action_export"
         android:title="导出数据"
         android:icon="@drawable/ic_export"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_import"
+        android:title="导入数据"
+        android:icon="@drawable/ic_import"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_recycle_bin"
+        android:title="回收站"
+        android:icon="@drawable/ic_recycle"
+        app:showAsAction="ifRoom" />
+
+    <!-- 多选相关菜单项 -->
+    <item
+        android:id="@+id/action_multi_select"
+        android:title="多选"
+        android:icon="@drawable/ic_select_all"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_move_to_project"
+        android:title="移动到项目"
+        android:icon="@drawable/ic_move"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
+
+    <item
+        android:id="@+id/action_cancel_multi_select"
+        android:title="取消多选"
+        android:icon="@drawable/ic_cancel"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
         
     
 </menu> 
